# Spectra

./: .bandit  .gitattributes  .gitignore  .gitignore.txt  .pypirc-example  BASIC_VULNERABILITY_SCANNER_IMPROVEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  GPU_ACCELERATION_TEST.md  HELP_SYSTEM_README.md  IDOR_SCANNER_DOCUMENTATION.md  IMPLEMENTATION_REPORT.md  IMPROVEMENT_RECOMMENDATIONS.md  LICENSE  Makefile  PROGRESS_REPORT.md  RAINBOW_TABLES_IMPLEMENTATION.md  README.md  SECURITY.md  SETUP_VENV.md  SUBDOMAIN_SCANNER_ROADMAP.md  TECHNOLOGY_DETECTOR_TESTS.md  VERBOSE_MODE_IMPLEMENTATION.md  XSS_SCANNER_IMPROVEMENTS.md  XXE_SCANNER_DOCUMENTATION.md  add_missing_test_instructions.py  bruteforce.txt  build.ps1  comandos_teste_xss.md  debug_gpu_performance.py  install-apt.sh  install.ps1  install.sh  lfi_scan_results.json  main.py  publish.ps1  pyproject.toml  redirect_payloads_focused.txt  release-check.ps1  requirements.txt  (+31 more)
.github/workflows/: auto-release.yml  ci.yml  release.yml
debian/: changelog  control  rules
scripts/: bump_version.py
spectra/: __init__.py  __main__.py
spectra/cli/: help_cli.py  main.py
spectra/core/: banner.py  config.py  exceptions.py  logger.py  report_generator.py  scan_result.py
spectra/core/help_system/: __init__.py  cli_integration.py  help_formatter.py  help_manager.py  json_schema.py  module_discovery.py  module_registry.py  search_examples.py
spectra/core/module_metadata/: __init__.py  base_metadata.py  validators.py
spectra/data/payloads/: open-redirect.txt  xxe-custom.txt
spectra/data/wordlists/: brazilian-extended.txt  simple_passwords.txt  top_passwords.txt
spectra/modules/: __init__.py  advanced_subdomain_scanner.py  banner_grabber.py  banner_grabber_metadata.py  basic_vulnerability_scanner.py  basic_vulnerability_scanner_metadata.py  command_injection_scanner.py  cve_integrator.py  directory_scanner.py  dns_analyzer.py  dns_analyzer_metadata.py  gpu_manager.py  hash_cracker.py  hash_cracker_metadata.py  headers_analyzer.py  headers_analyzer_metadata.py  idor_scanner.py  idor_scanner_metadata.py  lfi_scanner.py  metadata_extractor.py  network_monitor.py  network_monitor_metadata.py  port_scanner.py  sql_injection_scanner.py  ssl_analyzer.py  ssl_analyzer_metadata.py  ssrf_scanner.py  ssrf_scanner_metadata.py  subdomain_scanner.py  subdomain_scanner_metadata.py  technology_detector.py  technology_detector_metadata.py  vulnerability_scanner.py  vulnerability_scanner_metadata.py  waf_detector.py  xss_scanner.py  xxe_scanner.py  xxe_scanner_metadata.py
spectra/utils/: __init__.py  network.py  oast.py  parsers.py  rate_limiter.py  validators.py
spectra_suite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
tests/: test_basic_vulnerability_scanner.py  test_fixes.py  test_help_formatter.py  test_help_manager.py  test_module_metadata.py  test_module_registry.py
