[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra-suite"
version = "3.2.6"
description = "Spectra - Web Security Suite - Uma ferramenta de hacking ético para análise de segurança web"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Spectra Team", email = "team@spectra-security.com"}
]
maintainers = [
    {name = "Spectra Team", email = "team@spectra-security.com"}
]
keywords = ["security", "web", "hacking", "penetration testing", "vulnerability scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.6"
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "aiodns>=3.0.0",
    "websockets>=10.0",
    "dnspython>=2.2.0",
    "scapy>=2.4.5",
    "psutil>=5.9.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "Pillow>=9.0.0",
    "rich>=12.0.0",
    "tqdm>=4.64.0",
    "pyOpenSSL>=22.0.0",
    "cryptography>=37.0.0",
    "python-whois>=0.7.3",
    "pandas>=1.5.0",
    "asyncio-throttle>=1.0.2",
    "python-dateutil>=2.8.0",
    "urllib3>=1.26.0",
    "certifi>=2022.0.0",
    "charset-normalizer>=2.0.0",
    "idna>=3.0.0",
]

[project.optional-dependencies]
gpu = [
    "pyopencl>=2022.1",
    "pycuda>=2022.1",
]
web = [
    "selenium>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/spectra-team/spectra"
Documentation = "https://spectra-security.readthedocs.io"
Repository = "https://github.com/spectra-team/spectra.git"
"Bug Tracker" = "https://github.com/spectra-team/spectra/issues"
Changelog = "https://github.com/spectra-team/spectra/blob/main/CHANGELOG.md"

[project.scripts]
spectra = "spectra.cli.main:main"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["spectra"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["spectra"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection for legitimate use cases